--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-GAME_ROOM_SERVER_HOST = 0.0.0.0
+GAME_ROOM_SERVER_HOST = 'localhost'
 GAME_ROOM_SERVER_PORT = 3001
 
 GAME_ROOM_DOUBLEGRID = "doubleGrid"
